# uccn

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  scoped_ptr.hpp  simple_data.c  simple_data.cpp  simple_data.h  simple_data.hpp  simple_record.c  simple_record.h  simple_record_provider.c  simple_record_provider.cpp  simple_record_tracker.c  simple_record_tracker.cpp
include/uccn/: config.h  uccn.h  uccn.hpp  uccn_internal.h
include/uccn/common/: buffer.h  crc32.h  hash.h  logging.h  time.h
include/uccn/utilities/: eventfd.h  upoll.h
src/: uccn.c
src/common/: crc32.c  hash.c
src/utilities/: eventfd.c  upoll.c
